@@ -4,15 +4,19 @@ Hash: SHA256
 DIST Numbers_Words-0.16.4.tgz 58379 SHA256 93aa2b8d370a9d87d1ae2595b4f1b7b78c18e0f06cd94a6eda042b6bbeb14838 SHA512 f07c5bf170a74be170c87c217b8561066938669d319cb6ca683c564e2f8a5917109c97ea51c7de740023605e77c78d34d9d864e187edfbab158af11e19bc3155 WHIRLPOOL 8acbb5d55717e6c593b22c831bf759dbe98a6ba5dedd3a7f8b447f9eb8d091eb1f2bc37b4980e116267e68e97fd6ea60ac78c2ba4284bc5a1cd751fe2f734384
 DIST Numbers_Words-0.18.1.tgz 72925 SHA256 cbe0c2b482623af9aa56a8da23d03bf562ff1412ac11e425775c737145fa916f SHA512 b6063db873d65bc872ea64e6ae4282da9b36aa15ac336a5b443e4bc3cc7ad49538327bb56d0b70a482c82dfa1d732426f9cc45453d4d13a25a840871e1f6fb2c WHIRLPOOL 3effb9b2324b8e5fd60a5e841c4faf0eaa33790e5e61a3e967de50b0ae465d0f43a9d7ca19d28bf3176b3b798b1e3669f124e764c7b8ba1a66b78e7f0c7d71d9
 EBUILD PEAR-Numbers_Words-0.16.4.ebuild 416 SHA256 78fc3bd17f2fa1294f598dfb58887a9c94e10d949a1755ca6b5b07332d8df894 SHA512 b432a09006249e8bc9faa3d88a232dcebe7dfff7d2cf4a13a6ecc4d3d663a80cb7917cabcc045b304c1d7951be857958da4ab83f1247138ea3ae6c5177ad5800 WHIRLPOOL 91aab6fca36931ba1844a5b6f8c9a607204c8b0c8c5024f63900f9f65dbc46f25b1d0ac28987f705bc9a88209857f143f1415eab8c616794815066d4f4a54952
-EBUILD PEAR-Numbers_Words-0.18.1.ebuild 477 SHA256 b9c5a16ab2429ef16157dbb35918bb2db80cc8d04b8a4a3c09ae013891e14797 SHA512 d9c407a8c05fa7e10d3f2faa7080c3a1001fb20c5079021bebb611c57a17a7da58bb699534486b2dd68b51d15ac373e8d970a85bbdf98b241504092e9859bdc7 WHIRLPOOL adf5dd8d35e724c73c35154d847ac1ff93246e10fdc254e840fb686aa5043bbd874136b66e6c1b0d348a4e8d3e8a658e9441d03dfc322992817a87c3ca0fe892
-MISC ChangeLog 6555 SHA256 ceff132bd211e056a4663d01a5e86a70500e034d6a9ef1e7e9d33ce7a77d55bc SHA512 56a652b910264e9cbb078e72e34a5ec10aacd80260b034cadb779dfa1a3471b30cadaf55837cd249af3de766e4e0b3f9987925321bbf33bc2888722fcd5ef4f4 WHIRLPOOL e7649b58d751d79a7c2a79c5bf2c078f942a1bb057bab1e618e3660fe4b6217b8b6d22aa8fc259580db4f771bd0b956261ba4485bb4549574821f964970bc22e
+EBUILD PEAR-Numbers_Words-0.18.1.ebuild 484 SHA256 26cbe7796c5790d708eca5e485bed069bd9db6d6dc60c9a3572b527d98f6ccd2 SHA512 df55abf4b456b458e878cb2a1f43098cfef7a17c2056abebf07b6b26c11ffcf1a67d688a78a19d81b564a840a49581fa2632235f1e305dbc20aa474a462ec1e2 WHIRLPOOL 01be4d7be2679614615325fe1fcdcb5112611b69000143446534227a9e4feebe900b4bb84691ca022a6af3a4090b7e970d42c5d3a877bf191598da60b4c50085
+MISC ChangeLog 6677 SHA256 eba12fbd02729bbcc8c66b344da0fe75a796cfab18db8b96f700b9a3296e4839 SHA512 2e3003fb515d9b9a4e88ca710496843053836c4caa22b4e05aac19b69bdfbbd471ec192a7bc7e6f98e5e4d0d3d9ba471b3549218a29c79c8f9a4c7138966b714 WHIRLPOOL e5eed6eb08ee7f228cef96b714e82cd94f02d0565b1bacb2e1d90520f90ae05cf1ece84a5d293e246948cb7b8ea4cbc741b5976924b08d7f68b2e289602409a3
 MISC metadata.xml 156 SHA256 f6d70434415ff7294f2a64e7870f32318c5fab9153fe63a58841b12d897da6ba SHA512 c15813e9ecae01488222d09140617eaf0e6e9b9b9d40412e1cda7838e64c8fb8c73c030dc90d723aea571acadddb76941c9a620fc4e554ba052ace1cc6b0ef79 WHIRLPOOL 1b1513674a388e3e95e09cfd70996bc98fc058ca0e0e7c5dc63e0b3389bedeb4dc16b55245b92a8ded7390cca0dc481e418f236a236ded9afcc2ef3845b25130
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2
+Version: GnuPG v2.1
 
-iJwEAQEIAAYFAlXAsJ4ACgkQG9wOWsQutdahQAQAoPMy/No7fz/sDtlO3EDEu8W/
-eAoiEkc3z4IVaXp6My4q2qwyminTH+2NC5RD/7EYD/cwxZpfgB47Xqaw2PuZj5C3
-nv7eadR1m5u8mJz0Htitzx4pRn1OFKl1+3W5krO1QqH5ixnoaX0m94Zk5HbE517P
-0sCiJtagA8zYoSUX88I=
-=Zufk
+iQF8BAEBCABmBQJVxNFvXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXRFQ0MxMDlFRTJGQzJGRUFENTYzQjg4OUJG
+RjEwQ0RDNjIwNjc1NDc4AAoJEP8QzcYgZ1R4NXUIAJscbTOb4YccosVf6+ibvePw
+nNVi8Jhfw3tgMZXtTFFez3Z5nAriApTMcSRZLMypa45o8Q6silCiR+iHbCQuiAGv
+19AqN2ssgnFsoTQ06hfbE1XRNJ2D7X2hnHemfnhrEsMsM9bolf1c55C4vdCz0vX/
+Jv3ksZxPZiHCxQglkAEPx0+gLPeuYJCGUvHRleAtdhl/gu3UjmT0vgCzTlVTvnqY
+H9/92n9VL227RykgVxkkXREFQSDbGwXxnRp514LIR8xpt404ljwW+PCCWohuCILO
+Yw3tYbgjLM3tk5fGLLaMsYpJhJJYOD9FgWf+8phFgWA0N3+bWe+8od4bC9lgVSM=
+=jnhH
 -----END PGP SIGNATURE-----
