@@ -1,28 +1,22 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
 DIST characteristic-14.1.0.tar.gz 24612 SHA256 91e254948180678dd69e6143202b4686f2fa47cce136936079bb4d9a3b82419d SHA512 21bb40814f405c73471a83e15d1cfb07f74ebd157e647799bedffffd3909271145347eaec8ec09470dddad7224d1a15e8984a75f1fce00bbe20f9e1cb385f9b9 WHIRLPOOL d8044dfcbb7d75a383834bee842bd619b4bec65c8a0f467a563b9a80ee908bcf5c7de791eb220f9ba3b35a259a9ea6c6985f743518e2677d8a03a62db70ad98c
 DIST characteristic-14.3.0.tar.gz 26993 SHA256 ded68d4e424115ed44e5c83c2a901a0b6157a959079d7591d92106ffd3ada380 SHA512 e13a86f453cd3688a74188005b82a661a9c73d9f0408d9afe9e0575e69ffe87a5327f51e2c16a9c0a653b738e7c014d5aa08e353835f0aca7897714b7ae56e83 WHIRLPOOL e32b2801c1a56a9e6093c82ec9db3c8250756dd6ba80c0d63ca522c0a304e48920bf9cefc14c8491276365123c95f0e311be58f5cdba28dbab93391ed1455ba6
-EBUILD characteristic-14.1.0.ebuild 1232 SHA256 38ccb05eba1c49be552b4902c55eac32feb84ac51e86bdbf175cb5aecb7b8844 SHA512 0c8f907fff5e30144fa90f5ac27d0fbe4bfc51f3dc41ee75fddf6e4cf1eca83685c8a28201c31f02ec0863931c8e1d2c33fd81c98199ffbbedbb64bca87c17cb WHIRLPOOL bef7188ba38c7ccd7459a5f910dfa9efdc24933893c18b5df458adcf09518f03ec02189c9a4070d468428db8312098389a70b4f026e66a4c6d534499f98051f1
-EBUILD characteristic-14.3.0.ebuild 1252 SHA256 d65246ad5f4700342ee5926774faa1ee62745e46b95c6b2158036f50f278a8aa SHA512 4629b91e6eec983b0745d8759fab07ae5bbb9fc6f8570039c942ac0e5aee9e593ee00fbf3020701d65402a7c78afd7e2a49b7600c77b1f95f4a07ac28ed6e663 WHIRLPOOL 234c003b218e25d486dcf3ddc7c7a82a9449e8e694efee81c485b1331857b1b49ccbdc5d7c3b58c999374b1d15dca50e361c182c4f30adc7126c69a4444e8482
-MISC ChangeLog 1535 SHA256 72fd6f474a8df4068187baaa2bf1d224401a0ef34bc0439b901a7e585a10f06a SHA512 8bfe8dc8dc918b6bda0aeabb2e88e0bbea29038b6b073ba0ef7339259b5fbca76e005b69378d10681444d3e6c2f1885985d6ab356a813cf597e9beb210577df4 WHIRLPOOL 16112d7d3fc1fe8c2f3fa9bdc917f04a836f6e25c27d831c7c9848a3cf26adf74aa325aaf8d7bbf4f89eff05e7bd18329717692a555530c53dd7799807bd06c9
+EBUILD characteristic-14.1.0.ebuild 1241 SHA256 704092766a7fc75458732b9fb5aa2d583381f649fc0793485c9f412a132eed3a SHA512 b8143ac4f4685c48df08639eefbf3f361b33a5dbc804f6e4da37199168fac67af0aa8e3568272ff96a2853ed7084cb6a0d7c3e81a26555196ddb223cb105d490 WHIRLPOOL db8557ad6dd5cfc0e291e6aaaa959b63248f553f27e164523f3f30a92d4bd91f2830b59cad6a6497ee6ee6f629083e153d32d08ad00ebe02c5d1b6eb5d8d8186
+EBUILD characteristic-14.3.0.ebuild 1263 SHA256 0095fdab188d63be2f0054835b2f913650d7b93f50227f68112429b3565ff6ce SHA512 54e222c0b7a05d03a876749cd910c68ccc7e108033d422d1bd60b459ab7227794988317899dfee12d8048979005659bcf013a69cda9a8f11f382cca61ce92787 WHIRLPOOL dbe968e777dbce2f388ce7d1b43a16312edef575e86a51dd39ba2622efb0ce10639ad3720eb6e297b49b10e2e699ea0052cf1cb09548b2745cc6f95a2246a081
+MISC ChangeLog 1689 SHA256 0198ccb168e43e26db3751394262c000aaedf93642252b7876a4c462e502af30 SHA512 949b82635834574f904497906a397f6dbfca4bda40d46bc37a4173a4b4f164dcd9539e5fe7c4a997ebd99dbc8d6cd88fc671fc97530a6e99bc555fb70aa7d13a WHIRLPOOL 170976341023e5dc6809fd54ad1e9e02e00178e537966a534a345d5d2c79290878addf1f014d020be4742f26b4f645991b8bdee7379bfc35eff7e050719ac936
 MISC metadata.xml 304 SHA256 39c9e2124893a0938da71a7c1a0fa8b5f81cf32674923f500d677128161f507a SHA512 ba7d71efea2f40fecb5ca5f853177da46756859ced77d37bfecdb48c7fed3684409f63766cf52e1039fceeb2d43b2bb6e5bb87208bcb9cafd90e171ceb73d78c WHIRLPOOL 5b6322570b5be08a63afca60077ab3a5e544c3c28d5a721ef9950d14cb5dca5d0c3887bf5a22cbde8d352bfa93c9ab63cf8614beb1f206244ebe2b30ddd36308
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0
+Version: GnuPG v2.1
 
-iQJ8BAEBCgBmBQJVdCQhXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ0QUU0N0I4NzFERUI0MTJFN0EyODE0NUFF
-OTQwMkE3OUIwMzUyOUEyAAoJEOlAKnmwNSmi+tUP/jE3fRo45uuH/oozE7v4CILb
-VnwFfGYdDzHF+dcws06wShA84h69k13RJmrJ4CcbbjVdQj9Eipv4Q8sQYpQmu/hk
-tL4XZli4P1YHXZHAnOxlPG0FGD6FXxmHD/BoA0Qs2MR7U3dEIPLJuk2VaFILbRDp
-Lq62fd1S2Bo12qhXZ+Puhx9cXa02cal2D3C/43b5IGHuI2Oh0iVykuOEcP4X7Kst
-gbw5pz5IdxOv3tvFimAU7Z3X0FuPg0JJmgl2FrYf0BxWieyI4KQR4q+43kMuFahZ
-3uRqyPNKCnr8dwRjc+m/vpVie7NB1Vg7XQeG/WwGXUJy4UtvsQITGVqZ3REQn+LH
-gRlbj4sQHuxaYmGtLcrJ4i8U5VfuosXOM69zAc8SCN+P5MdUV6v/Af8vld71ERId
-+JCgS++W75Y6elmsTgpd375UN7rWjjOkHOpPM9WTVFKsSju6t5BBkk+gWbjMmRuQ
-9Bq4bZpb6+BM1qS0xHWW/cD6TbIJsLeS2a6kDTXtKcbctEm/i8kFbIiKmFodq8ga
-GqW5RsZo3C6tZkV0dfDkwj3ZsI+1Z7xGthm++ZTBMndeFYD9WvM+Ob/Jdy2r7oxk
-cDQpYUcjy2T87rOv47y8lertxdiX3V+r9fIIpOoTgAFXeqmJAsDHXK09KIbSYjJr
-FSy8qInYZ3aj05dmBzAZ
-=DxQb
+iQF8BAEBCABmBQJVxNTUXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXRFQ0MxMDlFRTJGQzJGRUFENTYzQjg4OUJG
+RjEwQ0RDNjIwNjc1NDc4AAoJEP8QzcYgZ1R4ntQIAIBkAuhhGhtIFhbsS6mr7qb0
+9KacIx2zU/B1xGPzdJOLkTHcBEmYtQTKaA33OWGEEjrPWdCbjzttoP5ATAjfqyzK
+hKYNE4J1KeEeWiHEG2iCsVZrUBmAU2ane+dqmf6W5kLwV345gm3dYrZ1Vp+jLK+s
+yGTTMINlWRdcoLGjSlPKSGwbdidwxDzzYeshcxfMC3Nryja755f1XD02pNrDV7mr
+C5g4p8sVZP8P0YUK6wZ1gq1kiDHzTaX+srjCShefXiPu+U7qJiqkLFulJUDrfNLE
+3xMa89rEcPoZtShS59j+Omijb7+eORtJ6J4zLZrmey5kmyrwcVvYUu5qoum0F9A=
+=z7vI
 -----END PGP SIGNATURE-----
