@@ -1,6 +1,6 @@
 # Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/characteristic/characteristic-14.1.0.ebuild,v 1.8 2015/04/08 08:05:22 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/characteristic/characteristic-14.1.0.ebuild,v 1.9 2015/08/07 15:54:59 klausman Exp $
 
 EAPI=5
 PYTHON_COMPAT=( python{2_7,3_3,3_4} pypy )
@@ -13,7 +13,7 @@ SRC_URI="mirror://pypi/${PN:0:1}/${PN}/${P}.tar.gz"
 
 LICENSE="MIT"
 SLOT="0"
-KEYWORDS="amd64 arm arm64 hppa ia64 m68k ppc ppc64 s390 sh x86"
+KEYWORDS="~alpha amd64 arm arm64 hppa ia64 m68k ppc ppc64 s390 sh x86"
 IUSE="doc test"
 
 RDEPEND=""
