@@ -1,6 +1,6 @@
 # Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/characteristic/characteristic-14.3.0.ebuild,v 1.1 2015/05/27 07:27:26 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/characteristic/characteristic-14.3.0.ebuild,v 1.2 2015/08/07 15:54:59 klausman Exp $
 
 EAPI=5
 
@@ -14,7 +14,7 @@ SRC_URI="mirror://pypi/${PN:0:1}/${PN}/${P}.tar.gz"
 
 LICENSE="MIT"
 SLOT="0"
-KEYWORDS="~amd64 ~arm ~arm64 ~hppa ~ia64 ~m68k ~ppc ~ppc64 ~s390 ~sh ~x86"
+KEYWORDS="~alpha ~amd64 ~arm ~arm64 ~hppa ~ia64 ~m68k ~ppc ~ppc64 ~s390 ~sh ~x86"
 IUSE="doc test"
 
 RDEPEND=""
