@@ -3,10 +3,10 @@ DEPEND=dev-lang/php:* >=dev-php/pear-1.8.1
 DESCRIPTION=Pure-PHP arbitrary precision integer arithmetic library
 EAPI=5
 HOMEPAGE=http://pear.php.net/Math_BigInteger
-KEYWORDS=~amd64 ~hppa ~ia64 ~ppc64 ~x86
+KEYWORDS=alpha ~amd64 ~hppa ~ia64 ~ppc64 ~x86
 LICENSE=MIT
 RDEPEND=>=dev-lang/php-5.3.0 dev-lang/php:* >=dev-php/pear-1.8.1
 SLOT=0
 SRC_URI=http://pear.php.net/get/Math_BigInteger-1.0.2.tgz
 _eclasses_=multilib	62927b3db3a589b0806255f3a002d5d3	php-pear-r1	6199074ba0005674c2291a5a8d0274e2	toolchain-funcs	42408102d713fbad60ca21349865edb4
-_md5_=6ee7e7b675ffad9000ed171246edfd18
+_md5_=64834bc3b1e5a08f0e17cf79b3004a45
