@@ -3,10 +3,10 @@ DEPEND=dev-lang/php:* >=dev-php/pear-1.8.1
 DESCRIPTION=Provides methods for spelling numerals in words
 EAPI=5
 HOMEPAGE=http://pear.php.net/Numbers_Words
-KEYWORDS=~amd64 ~hppa ~ia64 ~ppc64 ~x86
+KEYWORDS=alpha ~amd64 ~hppa ~ia64 ~ppc64 ~x86
 LICENSE=PHP-3.01
 RDEPEND=>=dev-lang/php-5.3.2 dev-php/PEAR-Math_BigInteger dev-lang/php:* >=dev-php/pear-1.8.1
 SLOT=0
 SRC_URI=http://pear.php.net/get/Numbers_Words-0.18.1.tgz
 _eclasses_=multilib	62927b3db3a589b0806255f3a002d5d3	php-pear-r1	6199074ba0005674c2291a5a8d0274e2	toolchain-funcs	42408102d713fbad60ca21349865edb4
-_md5_=11d7d082e099c803c64390ed4ae95c59
+_md5_=7402527c329962e28fed69da58d43a0a
