@@ -1,6 +1,10 @@
 # ChangeLog for dev-php/PEAR-Math_BigInteger
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-php/PEAR-Math_BigInteger/ChangeLog,v 1.5 2015/08/04 12:32:42 zlogene Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-php/PEAR-Math_BigInteger/ChangeLog,v 1.6 2015/08/07 15:40:11 klausman Exp $
+
+  07 Aug 2015; Tobias Klausmann <klausman@gentoo.org>
+  PEAR-Math_BigInteger-1.0.2.ebuild:
+  Stable on alpha, bug 528470
 
   04 Aug 2015; Mikle Kolyada <zlogene@gentoo.org>
   PEAR-Math_BigInteger-1.0.2.ebuild:
